[metrics-operator] Add TaskRunCounter

--- a/metrics-operator/config/400-crd.yaml
+++ b/metrics-operator/config/400-crd.yaml
@@ -26,3 +26,32 @@ spec:
       openAPIV3Schema:
         type: object
         x-kubernetes-preserve-unknown-fields: true
+---
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
+  name: taskrunmonitors.metrics.tekton.dev
+  labels:
+    app.kubernetes.io/instance: default
+    app.kubernetes.io/part-of: tekton-metrics-operator
+    pipeline.tekton.dev/release: "devel"
+    version: "devel"
+spec:
+  group: metrics.tekton.dev
+  scope: Namespaced
+  names:
+    kind: TaskRunMonitor
+    plural: taskrunmonitors
+    singular: taskrunmonitor
+    shortNames:
+    - trm
+    categories:
+    - tekton
+  versions:
+  - name: v1alpha1
+    served: true
+    storage: true
+    schema:
+      openAPIV3Schema:
+        type: object
+        x-kubernetes-preserve-unknown-fields: true
