--- a/metrics-operator/examples/20-repository.yaml
+++ b/metrics-operator/examples/20-repository.yaml
@@ -1,7 +1,7 @@
 apiVersion: metrics.tekton.dev/v1alpha1
 kind: TaskRunMonitor
 metadata:
-  name: release
+  name: repository
 spec:
   selector:
     matchExpressions:
