[metrics-operator] Add PipelineMonitor and PipelineRunMonitor

--- a/metrics-operator/config/500-controller-service.yaml
+++ b/metrics-operator/config/500-controller-service.yaml
@@ -21,7 +21,7 @@ spec:
       protocol: TCP
       targetPort: 9090
   selector:
-    app.kubernetes.io/name: concurrency-controller
-    app.kubernetes.io/component: concurrency-controller
+    app.kubernetes.io/name: controller
+    app.kubernetes.io/component: controller
     app.kubernetes.io/instance: default
     app.kubernetes.io/part-of: tekton-metrics-operator
