[metrics-operator] Add pipeline and pipelinerun monitors to runtime typer

--- a/metrics-operator/config/400-crd.yaml
+++ b/metrics-operator/config/400-crd.yaml
@@ -17,6 +17,7 @@ spec:
     shortNames:
     - tm
     categories:
+    - tektonmonitors
     - tekton
   versions:
   - name: v1alpha1
@@ -46,6 +47,67 @@ spec:
     shortNames:
     - trm
     categories:
+    - tektonmonitors
+    - tekton
+  versions:
+  - name: v1alpha1
+    served: true
+    storage: true
+    schema:
+      openAPIV3Schema:
+        type: object
+        x-kubernetes-preserve-unknown-fields: true
+---
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
+  name: pipelinemonitors.metrics.tekton.dev
+  labels:
+    app.kubernetes.io/instance: default
+    app.kubernetes.io/part-of: tekton-metrics-operator
+    pipeline.tekton.dev/release: "devel"
+    version: "devel"
+spec:
+  group: metrics.tekton.dev
+  scope: Namespaced
+  names:
+    kind: PipelineMonitor
+    plural: pipelinemonitors
+    singular: pipelinemonitor
+    shortNames:
+    - pm
+    categories:
+    - tektonmonitors
+    - tekton
+  versions:
+  - name: v1alpha1
+    served: true
+    storage: true
+    schema:
+      openAPIV3Schema:
+        type: object
+        x-kubernetes-preserve-unknown-fields: true
+---
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
+  name: pipelinerunmonitors.metrics.tekton.dev
+  labels:
+    app.kubernetes.io/instance: default
+    app.kubernetes.io/part-of: tekton-metrics-operator
+    pipeline.tekton.dev/release: "devel"
+    version: "devel"
+spec:
+  group: metrics.tekton.dev
+  scope: Namespaced
+  names:
+    kind: PipelineRunMonitor
+    plural: pipelinerunmonitors
+    singular: pipelinerunmonitor
+    shortNames:
+    - prm
+    categories:
+    - tektonmonitors
     - tekton
   versions:
   - name: v1alpha1
